# Snake-Frenzy

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/shader/: fragment_shader.frag
inc/: game.hpp  gui.hpp  system.hpp
include/: game.hpp  gui.hpp  system.hpp
sfmlButton/include/: button.hpp  ellipseButton.hpp  rectButton.hpp  sfmlButton.hpp
sfmlButton/src/: button.cpp  ellipseButton.cpp  rectButton.cpp
src/: game.cpp  gui.cpp  system.cpp
